Docker-Django/django-app/files/iptables_rules.txt
# Generated by iptables-save v1.4.21 on Sun Apr 23 16:33:40 2017
*nat
:PREROUTING ACCEPT [10:1208]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:52190
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:54218
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 52190 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 54218 -j SNAT --to-source :53
COMMIT
# Completed on Sun Apr 23 16:33:40 2017
# Generated by iptables-save v1.4.21 on Sun Apr 23 16:33:40 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 65000:65535 --dport 65000:65535 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 65000:65535 --dport 65000:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Apr 23 16:33:40 2017
